--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@ngrx/store": "^18.1.1",
+    "angular-in-memory-web-api": "^0.18.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
