--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@ngrx/effects": "^18.1.1",
     "@ngrx/store": "^18.1.1",
     "angular-in-memory-web-api": "^0.18.0",
     "rxjs": "~7.8.0",
