--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store": "^18.1.1",
     "angular-in-memory-web-api": "^0.18.0",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
